# kafka-mcp-grpc

./: .gitignore  1  CMakeLists.txt  README.md
config/: server.example.json
include/kafka/: kafka_admin.hpp  kafka_consumer.hpp  kafka_producer.hpp
include/mcp/: mcp_dispatcher.hpp  mcp_handler.hpp  response_builder.hpp  stdio_transport.hpp  tool_definitions.hpp
include/server/: mcp_grpc_server.hpp
include/utils/: config_loader.hpp  logger.hpp
proto/: kafka_messages.proto  mcp_service.proto
scripts/: build.sh
src/: main.cpp
src/kafka/: kafka_admin.cpp  kafka_consumer.cpp  kafka_producer.cpp
src/mcp/: mcp_dispatcher.cpp  mcp_grpc_server.cpp  mcp_handler.cpp  response_builder.cpp  stdio_transport.cpp  tool_definitions.cpp
src/server/: mcp_grpc_server.cpp  tool_registry.cpp
src/tests/: test_kafka_consumer.cpp  test_tool_definitions.cpp
src/utils/: config_loader.cpp  json_utils.cpp  logger.cpp
tests/: CMakeLists.txt  test_phase1_foundation.cpp  test_response_builder.cpp
